# daedalus

./: .env.example  .gitignore  AUDIT_REPORT.md  Makefile  README.md  TODO.md  project-plan.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_initial.py  20260501_0002_plan_proposals.py  20260503_0003_webauthn_credentials.py  20260503_0004_run_retry_of.py  20260504_0005_project_settings.py  20260506_0006_merge_batches.py  20260506_0006_user_notification_prefs.py  20260506_0007_rate_limit_columns.py  (+9 more)
backend/daedalus/: __init__.py  anomaly.py  costs.py  discovery.py  git_status.py  main.py  notify.py  observability.py
backend/tests/: conftest.py  test_anomaly.py  test_app_imports.py  test_argus_tamper.py  test_argus_transient.py  test_audit_integrity.py  test_auth_helpers.py  test_auth_login_stages.py  test_autorun.py  test_cgroups.py  test_cli.py  test_client_certs.py  test_connector_reload.py  test_connector_signing.py  test_connectors.py  test_cost_cap.py  test_fix_chain_cap.py  test_forge.py  test_ideas_patch.py  test_internal_planning.py  test_iris_holder.py  test_llm.py  test_merge_batch_claim_and_reconcile.py  test_merge_reconcile_ship.py  test_migration_heads.py  test_notification_prefs_api.py  test_notifications.py  test_notify.py  test_object_store.py  test_plan_proposals.py  test_planner_notes.py  test_project_ideas.py  test_project_lease.py  test_pythia_parser.py  test_security_hardening.py  test_stdin_eof.py  test_test_login_bypass.py  test_usage_parser.py
(+186 files in other folders)
